--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <div class="container">
         <div class = "header">
-    <h1>Valeria Grazioso</h1>
+    <h1>VALERIA GRAZIOSO</h1>
     <h5>Web Design - Spring 2019</h5>
             </div>
   
