--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <title>Valeria's Web Design Landing Page</title>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     
     <style>
         body {
             padding: 0;
             margin: 50px 0px;
             background-color: lightblue;
-            font-family: 'Josefin Sans', sans-serif;
+            font-family: 'Questrial', sans-serif;
         }
         
          .container {
