--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             padding: 0;
             margin: 50px 0px;
-            background-color: lightcyan;
+            background-color: lightcoral;
             font-family: 'Questrial', sans-serif;
         }
         
