--- a/project1 - jquery - button/index.html
+++ b/project1 - jquery - button/index.html
@@ -4,6 +4,8 @@
         <title>Valeria's Letterform</title>
         <link rel="stylesheet" href="https://use.typekit.net/yfk2kps.css">
         <link rel="stylesheet" href="assets/styles.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="assets/jquery.cycle2.min.js"></script>
     </head>
     <body>
         <div class="container">
@@ -11,6 +13,10 @@
                 <div class="header"></div>
                 <div class ="letter-container">
                     <h1>P</h1>
+                    <div class="cycle-slideshow analysis" data-cycle-timeout="0" data-cycle-next="#button"> 
+                    <img src="assets/empty-analysis.png" width="349" height="449" alt="an empty .png place holder file" class="cycle-slide" />
+                    <img src="assets/letter-analysis.png" width="349" height="449" alt="typographic analysis of the Adobe Garamond Pro P" class="cycle-slide" />
+                    </div>
                     <div id="button"></div>
                 </div>
                 <div>
