--- a/project1 - jquery - button/index.html
+++ b/project1 - jquery - button/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div>
                     <h2>Adobe Garamond Pro / Regular</h2>
-                    <p>Adobe Garamond Pro was designed by Robert Slimbach in 1989. It was designed as a digital interpretation of the roman types of Claude Garamond and the italic types of Robert Granjon (<a href="https://www.fonts.com/font/adobe/adobe-garamond/story">History</a>). Robert Slimbach captured the beauty and balance of the original Garamond typefaces but also offered all the advantages of a contemporary digital type family (<a href="https://www.adobe.com/content/dam/acom/en/products/type/pdfs/AdobeGaramondPro.pdf">Adobe Garamond Pro</a>). The rich history behind this font and its elegance and beauty, are the reason why I chose this font. </p>
+                    <p>Adobe Garamond Pro was designed by Robert Slimbach in 1989. It was designed as a digital interpretation of the roman types of Claude Garamond and the italic types of Robert Granjon (<a href="https://www.fonts.com/font/adobe/adobe-garamond/story">History</a>). Slimbach captured the beauty and balance of the original Garamond typefaces but also offered all the advantages of a contemporary digital type family (<a href="https://www.adobe.com/content/dam/acom/en/products/type/pdfs/AdobeGaramondPro.pdf">Adobe Garamond Pro</a>). Its rich history, elegance and beauty are the reason why I chose this font. </p>
                 </div>
                 
                 <div>
