--- a/project1 - jquery - button/index.html
+++ b/project1 - jquery - button/index.html
@@ -39,8 +39,8 @@
                 </div>
                 <div class="sources">
                     <h3>Sources</h3>
-                    <p>Adobe Garamond Font Family Typeface Story. Fonts.com, www.fonts.com/font/adobe/adobe-garamond/story.</p>
-                    <p>Adobe Garamond Pro. Robert Slimbach | Adobe Fonts, fonts.adobe.com/foundries/adobe.</p>
+                    <h4><p>Adobe Garamond Font Family Typeface Story. Fonts.com, www.fonts.com/font/adobe/adobe-garamond/story.</p>
+                    <p>Adobe Garamond Pro. Robert Slimbach | Adobe Fonts, fonts.adobe.com/foundries/adobe.</p></h4>
                 </div>
             </div>
          </div>
