--- a/index.html
+++ b/index.html
@@ -70,22 +70,20 @@
      <div class="project">
             <h3>Project 1: Letterforms</h3>
             <ul>
-                <li><a href="project1/wire-frame-test.html">Wireframe</a></li>
-                <li><a href="project1/plain-html.html">Plain HTML</a></li>
-                <li><a href="project1/new_index.html">Wireframe with Content</a></li>
                 <li><a href="project1/index.html">Fully Functional Site</a></li>
-                <li><a href="project1/boxes-flex.html">Boxes &amp; Flex Demo Code</a></li>
             </ul>
         </div>
-
-        <div class="resource">
-            <h3>Resources</h3>
+        
+         <div class="project">
+            <h3>Project 2: Game/Learning Tool</h3>
             <ul>
-                <li><a href="resources/starter_template.html">HTML Starter Template</a></li>
+                <li><a href="Project%25202/wireframes/index.html">Interactive Coded Wireframe</a></li>
+                <li><a href="Project%25202/index.html">Fully Functional Site</a></li>
             </ul>
-
         </div>
+
     </div>
+
 
 </body>
 
