--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
          <div class="project">
             <h3>Project 2: Game/Learning Tool</h3>
             <ul>
-                <li><a href="Project%25202/wireframes/index.html">Interactive Coded Wireframe</a></li>
-                <li><a href="Project%25202/index.html">Fully Functional Site</a></li>
+                <li><a href="Project2/wireframes/index.html">Interactive Coded Wireframe</a></li>
+                <li><a href="Project2/index.html">Fully Functional Site</a></li>
             </ul>
         </div>
 
