--- a/Project2/index.html
+++ b/Project2/index.html
@@ -23,7 +23,7 @@
                 <img src="assets/sloth.png">
             </div>
             <div id="boa-button" class="individual">
-                <img src="assets/boa.png">
+                <img src="assets/Boa.png">
             </div>
             <div id="puma-button" class="individual">
                 <img src="assets/puma.png">
