--- a/Project2/index.html
+++ b/Project2/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <h3>The Animals of</h3> <h1>Guatemala</h1>
+        <h4>Click on the picture to learn more about each animal!</h4>
         <div class="flex-box animals">
             <div id="quetzal-button" class="individual">
                 <img src="assets/quetzal.png">
