--- a/Project2/SlickQuiz-master/index.html
+++ b/Project2/SlickQuiz-master/index.html
@@ -8,6 +8,7 @@
         <link href="css/reset.css" media="screen" rel="stylesheet" type="text/css">
         <link href="css/slickQuiz.css" media="screen" rel="stylesheet" type="text/css">
         <link href="css/master.css" media="screen" rel="stylesheet" type="text/css">
+        
     </head>
 
     <body id="slickQuiz">
@@ -31,6 +32,7 @@
             <div class="quizResultsCopy">
                 <!-- where the quiz result copy goes -->
             </div>
+             <a class="button home" href="../index.html">Home</a>
         </div>
 
         <script src="js/jquery.js"></script>
