--- a/Project2/index.html
+++ b/Project2/index.html
@@ -48,6 +48,8 @@
         border-radius: 5px;
 	    text-decoration: none;
         margin-left:40%; 
+        margin-bottom: 45px;
+        margin-top: 45px;
 }
     .button:hover {
     background-color:steelblue;
