--- a/Project2/index.html
+++ b/Project2/index.html
@@ -42,9 +42,9 @@
         padding: 5px 15px;
         color:#ffffff;
         background-color:#0C4569;
-        border: 1px solid #fff;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
+        border: 1px solid #0C4569;
         border-radius: 5px;
 	    text-decoration: none;
         margin-left:40%; 
