--- a/Project2/wireframes/index.html
+++ b/Project2/wireframes/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets%2520copy/styles.css">
     <title>Interactive Coded Wireframe</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,800" rel="stylesheet">
     <link rel="stylesheet"
-    href="assets/styles.css">
+    href="assets%2520copy/styles.css">
 </head>
 
 <body>
@@ -14,22 +14,22 @@
         <h1>Title</h1>
         <div class="flex-box animals">
             <div id="animal1-button" class="individual">
-                <img src="assets%2520copy/quetzal.png">
+                <img src="">
             </div>
             <div id="animal2-button" class="individual">
-                <img src="assets%2520copy/jaguar.png">
+                <img src="assets%2520copy/white.png">
             </div>
             <div id="animal3-button" class="individual">
-                <img src="assets%2520copy/monkey.png">
+                <img src="assets%2520copy/white.png">
             </div>
             <div id="animal4-button" class="individual">
-                <img src="assets%2520copy/sloth.png">
+                <img src="assets%2520copy/white.png">
             </div>
             <div id="animal5-button" class="individual">
-                <img src="assets%2520copy/puma.png">
+                <img src="assets%2520copy/white.png">
             </div>
             <div id="animal6-button" class="individual">
-                <img src="assets%2520copy/Boa.png">
+                <img src="assets%2520copy/white.png">
             </div>
         </div>
     </div>
@@ -42,7 +42,7 @@
     <!--    Modal Content -->
     <div class="modal"></div>
     <div class="modal-content" id="animal1-modal">
-        <img src="">
+        <img src="assets%2520copy/white.png">
         <div class="no-flex">
             <span class="close" id="animal1-close">&times;</span>
 
@@ -56,7 +56,7 @@
     </div>
 
     <div class="modal-content" id="animal2-modal">
-        <img src="">
+        <img src="assets%2520copy/white.png">
         <div class="no-flex">
             <span class="close" id="animal2-close">&times;</span>
             <h1>ANIMAL2</h1>
@@ -68,7 +68,7 @@
     </div>
     
      <div class="modal-content" id="animal3-modal">
-        <img src="g">
+        <img src="assets%2520copy/white.png">
         <div class="no-flex">
             <span class="close" id="animal3-close">&times;</span>
             <h1>ANIMAL3</h1>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="modal-content" id="animal4-modal">
-        <img src="">
+        <img src="assets%2520copy/white.png">
         <div class="no-flex">
             <span class="close" id="animal4-close">&times;</span>
             <h1>ANIMAL4</h1>
@@ -92,7 +92,7 @@
     </div>
 
       <div class="modal-content" id="animal5-modal">
-        <img src="">
+        <img src="assets%2520copy/white.png">
         <div class="no-flex">
             <span class="close" id="animal5-close">&times;</span>
             <h1>ANIMAL5</h1>
@@ -104,7 +104,7 @@
     </div>
     
         <div class="modal-content" id="animal6-modal">
-        <img src="">
+        <img src="assets%2520copy/white.png">
         <div class="no-flex">
             <span class="close" id="animal6-close">&times;</span>
             <h1>ANIMAL6</h1>
