--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
                 <li><a href="Project2/index.html">Fully Functional Site</a></li>
             </ul>
         </div>
+        
+         <div class="project">
+            <h3>Exercise 1: Responsive Web Design</h3>
+            <ul>
+                <li><a href="Responsive%2520Web%2520Design/index.html">Responsive Web Design</a></li>
+            </ul>
+        </div>
 
     </div>
 
