--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
          <div class="project">
             <h3>Exercise 1: Responsive Web Design</h3>
             <ul>
-                <li><a href="Responsive%2520Web%2520Design/index.html">Responsive Web Design</a></li>
+                <li><a href="Responsive-Web-Design/index.html">Responsive Web Design</a></li>
             </ul>
         </div>
 
