--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
         </div>
         
          <div class="project">
-            <h3>Exercise 1: Responsive Web Design</h3>
+            <h3>Responsive Web Design</h3>
             <ul>
-                <li><a href="Responsive-Web-Design/index.html">Responsive Web Design</a></li>
+                <li><a href="Responsive-Web-Design/index.html">Exercise 1: Responsive Web Design</a></li>
+                <li><a href="Exercise1/index.html">Exercise 2: Responsive Resume</a></li>
             </ul>
+              
         </div>
 
     </div>
