--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-     <link rel="stylesheet" href="assets/styles.css">
+    <meta charset='UTF-8'/>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <link rel="stylesheet" href="assets/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200, 300, 400,500, 600, 700, 800" rel="stylesheet">
     <title>Responsive Resume</title>
 </head>
