--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -14,11 +14,12 @@
         <h1>Valeria Grazioso</h1></div>
         <div id="contact_info"> 
             <h5>ADDRESS</h5>
-                <p>1233 N Eddy St.
-                South Bend, IN 46617</p>
+            <p>1233 N Eddy St.
+            South Bend, IN 46617<br></p>
             <h5>PHONE</h5>
-            <p>(312) 683-638</p>
-            <h5>EMAIL</h5><p>vgrazios@nd.edu<br></p>
+            <p>(312) 683-638<br></p>
+            <h5>EMAIL</h5>
+            <p>vgrazios@nd.edu<br></p>
         </div>
 </header>
     
