--- a/Project3/index.html
+++ b/Project3/index.html
@@ -1,82 +1,71 @@
-<!docttype html>
-<html>
-
+<! DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Cantata+One|Questrial" rel="stylesheet">
-    <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles.css">
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/ski4iyg.css">
 </head>
-
-<body>
-    <div class="header">
-            <div class="name">
-            <a href="index.html" ><h1>valeria grazioso</h1></a>
+<html>
+    <body>
+        <header class="site-header">
+        <div class="nav-bar">
+            <nav class="topnav" id="myTopnav">
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+                <div class="main-nav">
+                    <a href="index.html">home</a>
+                    <a href="about.html">about</a>
+                    <a href="resume.html">resume</a>
+                </div>
+            </nav>
         </div>
-        <div class="topnav" id="myTopnav">
-            <a href="javascript:void(0);" class="icon" onclick="myFunction ()">
-                <i class="fa fa-bars"></i>
-            </a>
-            <a href="about.html">about</a>
-            <a href="resume.html">resume</a>
-            <a href="index.html" class="active">home</a>
-        </div>
-    </div>
+    </header>
 
     <section class="page">
         <main>
-
-        
-            <div class="portfolio">
-                <div class="top-projects">
-                    <div class="project-1 img">
-                        <a href="project-1.html">
-                            <img src="assets/project-1.jpeg" style="max-width:100%;height:auto;">
-                        </a>
+            <section class="intro">
+                <h1>Valeria Grazioso</h1>
+                <h3>My work</h3>
+            </section>
+            <section class="projects">
+                <div class="project1">
+                <a href="project1.html" class="link1">
+                    <div class="project1_info">
+                        <h4>Type Specimen Book</h4>
                     </div>
-
-                    <div class="project-2 img">
-                        <a href="project-2.html">
-                            <img src="assets/project-2.jpeg" style="max-width:100%;height:auto;">
-                        </a>
+                    <img src="assets/project-1.jpg">
+                </a>
+                </div>
+                <div class="project2">
+                <a href="project2.html" class="link2">
+                    <div class="project2_info">
+                        <h4>Illustration</h4>
                     </div>
+                    <img src="assets/project-2.jpg">
+                </a>
                 </div>
-                
-                <div class="bottom-projects">
-                <div class="project-3 img">
-                    <a href="project-3.html">
-                        <img src="assets/project-3.jpeg" style="max-width:100%;height:auto;">
-                    </a>
-                </div>
-
-                <div class="project-4 img">
-                    <a href="project-4.html">
-                        <img src="assets/project-4.jpeg" style="max-width:100%;height:auto;">
-                    </a>
-                </div>
+                <div class="project3">
+                <a href="project3.html" class="link3">
+                    <div class="project3_info">
+                        <h4>Portrait Photography</h4>
                     </div>
-            </div>
+                    <img src="assets/project-3.jpg">
+                </a>
+                </div>
+                <div class="project4">
+                <a href="project4.html" class="link4">
+                    <div class="project4_info">
+                        <h4>Package Design</h4>
+                    </div>
+                    <img src="assets/project-4.jpg">
+                </a>
+                    </div>
+            </section>
         </main>
     </section>
-
-
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += "responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-        // /main>
-    </script>
-
-
-
-
-
-</body>
-
-</html>
+    <script src="assets/navbar.js"></script>
+    </body>
+</html> 
