--- a/Project3/greeting.html
+++ b/Project3/greeting.html
@@ -20,7 +20,7 @@
     </script>
     
 
-<meta http-equiv="refresh" content="10; URL=https://valeriagrazioso.github.io/Project3/index.html">
+<meta http-equiv="refresh" content="10; url=https://valeriagrazioso.github.io/Project3/index.html">
        
 </body>
 </html>
