--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
                 <li><a href="Responsive-Web-Design/index.html">Exercise 1: Responsive Web Design</a></li>
                 <li><a href="Exercise1/index.html">Exercise 2: Responsive Resume</a></li>
             </ul>
+             
+         <div class="project">
+            <h3>Portfolio Website</h3>
+            <ul>
+                <li><a href="Project3/greeting.html">Portfolio Site with Welcome Page</a></li>
+                <li><a href="Project3/index.html">Portfolio Site</a></li>
+            </ul>
               
         </div>
 
