--- a/index.html
+++ b/index.html
@@ -94,12 +94,10 @@
             <ul>
                 <li><a href="Project3/greeting.html">Portfolio Site with Welcome Page</a></li>
                 <li><a href="Project3/index.html">Portfolio Site</a></li>
-            </ul>
-              
+             </ul>    
         </div>
-
     </div>
-
+    </div>
 
 </body>
 
