--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
          <div class="project">
             <h3>Portfolio Website</h3>
             <ul>
-                <li><a href="Project3/greeting.html">Portfolio Site with Welcome Page</a></li>
+                <li><a href="Project3/typing/greeting.html">Portfolio Site with Welcome Page</a></li>
                 <li><a href="Project3/index.html">Portfolio Site</a></li>
              </ul>    
         </div>
