--- a/Project3/resume.html
+++ b/Project3/resume.html
@@ -33,8 +33,8 @@
 <section class="page">
     <main>
         <section class="name">
-        <h1>Valeria Grazioso</h1>
-        </section>
+                <h1>VALERIA<span> GRAZIOSO</span></h1>
+            </section>
         
 <section class="content">
 
