--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
         <div class="project">
             <h3>Project 3: Portfolio Website</h3>
             <ul>
-                <li><a href="Project3/typing/greeting.html">Portfolio Site with Welcome Page</a></li>
+                <li><a href="Project3/typing/greeting.html">Fully Functional Site</a></li>
                 <li><a href="Project3/index.html">Portfolio Site</a></li>
-             </ul>    
+                <li><a href="">Interactive Coded Wireframe</a></li>
+             </ul>      
         
          <div class="project">
             <h3>Responsive Web Design</h3>
