--- a/Project3/project4.html
+++ b/Project3/project4.html
@@ -60,7 +60,7 @@
             
         <div class="two-photos">
             <div class="image-left">
-                <img src="assets/mock-up4(6).JPG"
+                <img src="assets/mock-up4(6).jpg"
                 style="max-width:100%;height:auto;">
             </div>
             <div class="image-right">
