--- a/Project3/project1.html
+++ b/Project3/project1.html
@@ -56,7 +56,7 @@
             </div>
         </div>
             
-        <div class="big-image img">
+        <div class="big-image">
             <img src="assets/mock-up1(1).jpg" style="max-width:100%;height:auto;">
         </div>
             
