--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <div class="project">
             <h3>Project 3: Portfolio Website</h3>
             <ul>
+                <li><a href="Project3/CodedWireframes/index.html">Interactive Coded Wireframes</a></li>
                 <li><a href="Project3/typing/greeting.html">Fully Functional Site</a></li>
-                <li><a href="Project3/index.html">Portfolio Site</a></li>
-                <li><a href="">Interactive Coded Wireframe</a></li>
+                <li><a href="Project3/index.html">Portfolio Site without welcome page</a></li>
              </ul>      
         
          <div class="project">
