--- a/Project3/project2.html
+++ b/Project3/project2.html
@@ -41,7 +41,7 @@
             
         <div class="overall-description">
             <div class="course">
-                <p><b>Couse</b> Visual Communication Design1: Orgins, Concepts and Process</p>
+                <p><b>Course</b> Visual Communication Design 1: Orgins, Concepts and Process</p>
             </div>
             <div class="description">
                 <p>In this project we were asked to create a poster that called for a social action. In particular for some type of restoration or rehabilitation in the city of South Bend. I decided to make a poster urging people to help donate to the restoration of the Lafayette Building, a major architectural building in the city. The development of this poster underwent a process of research. I decided to make a simply design, that showed the architectural beauty of the building by illustrating it. I decided to illustrate the main view of the building, as it included the most detail and that way I would be able to really emphasize it. Additionally, after concluding the line work, it was determined that coloring such a traditional architectural building, with bright colors, would really make the building stand out and catch the attention of the viewer. The final product was a 27” x 39” poster printed on canvas, as it helped bring out all of its details.</p>
