--- a/Project3/project3.html
+++ b/Project3/project3.html
@@ -31,7 +31,7 @@
     <section class="page">
         <main>
         <div class="title">
-            <h1>Portrait<span> Photography</span></h1>
+            <h1>Portrait <span>Photography</span></h1>
         </div>
 
         <div class="big-image img">
@@ -40,7 +40,7 @@
             
         <div class="overall-description">
             <div class="course">
-                <p><b>Couse</b> Photography 1</p>
+                <p><b>Course</b> Photography 1</p>
             </div>
         
             <div class="description">
