--- a/Project3/project4.html
+++ b/Project3/project4.html
@@ -40,7 +40,7 @@
     
         <div class="overall-description">
             <div class="course">
-                <p><b>Couse </b>Visual Communication Design 9: Professional Practice</p>
+                <p><b>Course </b>Visual Communication Design 9: Professional Practice</p>
             </div>
             <div class="description">
                 <p>For this project, I was asked to develop a packaging system for a product of my choosing. The goal was to propose a new packaging strategy for a product that already existed. The final product had to include a brand (logo, logotype, and symbol), a packaging system (both interior and exterior), and how the emerging system applied to various products, market displays and collateral. I decided to create a packaging system for dog treats, as this is an item in which many people spend a significant amount of their income, but still has a package design that is uncomfortable and hard to work with. This project required the development and the documentation of our new packaging, which can be seen of the pictures included. Intensive research and to be made regarding the existing products in the market, the underlying trends and demographics. The resulting package design was targeted towards the growing trend of buying simpler and more organic dog treats. The final product resulted in three different designs. </p>
